1、添加spring-security配置，设置账户密码 2、使用FastJson作为转换器，需要显示配置MediaType

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # 管理端口
-management.port=8888
-management.security.enabled=false
+management.port=9999
+management.security.enabled=true
+security.user.name=admin
+security.user.password=admin
 
 # 服务端口
-server.port=8080
+server.port=8081
