--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 # 管理端口
 management.port=9999
-management.security.enabled=true
-security.user.name=admin
-security.user.password=admin
+
+# 配置开启访问权限，需要使用security组件
+#management.security.enabled=true
+#security.user.name=admin
+#security.user.password=admin
 
 # 服务端口
 server.port=8081
